--- a/AI/basic_model.ipynb
+++ b/AI/basic_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,8 +339,230 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# load model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4070: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:422: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
+      "\n",
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_2 (Conv2D)            (None, 254, 254, 32)      896       \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_2 (MaxPooling2 (None, 127, 127, 32)      0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 516128)            0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 38)                19612902  \n",
+      "=================================================================\n",
+      "Total params: 19,613,798\n",
+      "Trainable params: 19,613,798\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.models import load_model\n",
+    "model=load_model(r\"C:\\work\\freelancing\\plants-collage-project\\model-v1.h5\")\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# save to .pb\n",
     "# https://blog.metaflow.fr/tensorflow-how-to-freeze-a-model-and-serve-it-with-a-python-api-d4f3596b3adc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def freeze_session(session, keep_var_names=None, output_names=None, clear_devices=True):\n",
+    "    \"\"\"\n",
+    "    Freezes the state of a session into a pruned computation graph.\n",
+    "\n",
+    "    Creates a new computation graph where variable nodes are replaced by\n",
+    "    constants taking their current value in the session. The new graph will be\n",
+    "    pruned so subgraphs that are not necessary to compute the requested\n",
+    "    outputs are removed.\n",
+    "    @param session The TensorFlow session to be frozen.\n",
+    "    @param keep_var_names A list of variable names that should not be frozen,\n",
+    "                          or None to freeze all the variables in the graph.\n",
+    "    @param output_names Names of the relevant graph outputs.\n",
+    "    @param clear_devices Remove the device directives from the graph for better portability.\n",
+    "    @return The frozen graph definition.\n",
+    "    \"\"\"\n",
+    "    graph = session.graph\n",
+    "    with graph.as_default():\n",
+    "        freeze_var_names = list(set(v.op.name for v in tf.global_variables()).difference(keep_var_names or []))\n",
+    "        output_names = output_names or []\n",
+    "        output_names += [v.op.name for v in tf.global_variables()]\n",
+    "        input_graph_def = graph.as_graph_def()\n",
+    "        if clear_devices:\n",
+    "            for node in input_graph_def.node:\n",
+    "                node.device = \"\"\n",
+    "        frozen_graph = tf.graph_util.convert_variables_to_constants(\n",
+    "            session, input_graph_def, output_names, freeze_var_names)\n",
+    "        return frozen_graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-5-0d92ab84a915>:26: convert_variables_to_constants (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.compat.v1.graph_util.convert_variables_to_constants`\n",
+      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\graph_util_impl.py:270: extract_sub_graph (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.compat.v1.graph_util.extract_sub_graph`\n",
+      "INFO:tensorflow:Froze 23 variables.\n",
+      "INFO:tensorflow:Converted 23 variables to const ops.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras import backend as K\n",
+    "import tensorflow as tf\n",
+    "# Create, compile and train model...\n",
+    "\n",
+    "frozen_graph = freeze_session(K.get_session(),\n",
+    "                              output_names=[out.op.name for out in model.outputs])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function write_graph in module tensorflow.python.framework.graph_io:\n",
+      "\n",
+      "write_graph(graph_or_graph_def, logdir, name, as_text=True)\n",
+      "    Writes a graph proto to a file.\n",
+      "    \n",
+      "    The graph is written as a text proto unless `as_text` is `False`.\n",
+      "    \n",
+      "    ```python\n",
+      "    v = tf.Variable(0, name='my_variable')\n",
+      "    sess = tf.compat.v1.Session()\n",
+      "    tf.io.write_graph(sess.graph_def, '/tmp/my-model', 'train.pbtxt')\n",
+      "    ```\n",
+      "    \n",
+      "    or\n",
+      "    \n",
+      "    ```python\n",
+      "    v = tf.Variable(0, name='my_variable')\n",
+      "    sess = tf.compat.v1.Session()\n",
+      "    tf.io.write_graph(sess.graph, '/tmp/my-model', 'train.pbtxt')\n",
+      "    ```\n",
+      "    \n",
+      "    Args:\n",
+      "      graph_or_graph_def: A `Graph` or a `GraphDef` protocol buffer.\n",
+      "      logdir: Directory where to write the graph. This can refer to remote\n",
+      "        filesystems, such as Google Cloud Storage (GCS).\n",
+      "      name: Filename for the graph.\n",
+      "      as_text: If `True`, writes the graph as an ASCII proto.\n",
+      "    \n",
+      "    Returns:\n",
+      "      The path of the output proto file.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(tf.train.write_graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'my_model.pb'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.train.write_graph(frozen_graph, \"\", \"my_model.pb\", as_text=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d={0: 'Apple___Apple_scab',\n",
+    " 1: 'Apple___Black_rot',\n",
+    " 2: 'Apple___Cedar_apple_rust',\n",
+    " 3: 'Apple___healthy',\n",
+    " 4: 'Blueberry___healthy',\n",
+    " 5: 'Cherry_(including_sour)___healthy',\n",
+    " 6: 'Cherry_(including_sour)___Powdery_mildew',\n",
+    " 7: 'Corn_(maize)___Cercospora_leaf_spot Gray_leaf_spot',\n",
+    " 8: 'Corn_(maize)___Common_rust_',\n",
+    " 9: 'Corn_(maize)___healthy',\n",
+    " 10: 'Corn_(maize)___Northern_Leaf_Blight',\n",
+    " 11: 'Grape___Black_rot',\n",
+    " 12: 'Grape___Esca_(Black_Measles)',\n",
+    " 13: 'Grape___healthy',\n",
+    " 14: 'Grape___Leaf_blight_(Isariopsis_Leaf_Spot)',\n",
+    " 15: 'Orange___Haunglongbing_(Citrus_greening)',\n",
+    " 16: 'Peach___Bacterial_spot',\n",
+    " 17: 'Peach___healthy',\n",
+    " 18: 'Pepper,_bell___Bacterial_spot',\n",
+    " 19: 'Pepper,_bell___healthy',\n",
+    " 20: 'Potato___Early_blight',\n",
+    " 21: 'Potato___healthy',\n",
+    " 22: 'Potato___Late_blight',\n",
+    " 23: 'Raspberry___healthy',\n",
+    " 24: 'Soybean___healthy',\n",
+    " 25: 'Squash___Powdery_mildew',\n",
+    " 26: 'Strawberry___healthy',\n",
+    " 27: 'Strawberry___Leaf_scorch',\n",
+    " 28: 'Tomato___Bacterial_spot',\n",
+    " 29: 'Tomato___Early_blight',\n",
+    " 30: 'Tomato___healthy',\n",
+    " 31: 'Tomato___Late_blight',\n",
+    " 32: 'Tomato___Leaf_Mold',\n",
+    " 33: 'Tomato___Septoria_leaf_spot',\n",
+    " 34: 'Tomato___Spider_mites Two-spotted_spider_mite',\n",
+    " 35: 'Tomato___Target_Spot',\n",
+    " 36: 'Tomato___Tomato_mosaic_virus',\n",
+    " 37: 'Tomato___Tomato_Yellow_Leaf_Curl_Virus'}"
    ]
   },
   {
