--- a/AI/basic_model.ipynb
+++ b/AI/basic_model.ipynb
@@ -344,17 +344,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4070: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
-      "\n",
-      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:422: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
-      "\n",
       "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
@@ -376,7 +372,7 @@
    ],
    "source": [
     "from keras.models import load_model\n",
-    "model=load_model(r\"C:\\work\\freelancing\\plants-collage-project\\model-v1.h5\")\n",
+    "model=load_model(r\"C:\\work\\freelancing\\plants-collage-project\\models\\model-v1.h5\")\n",
     "model.summary()"
    ]
   },
@@ -520,49 +516,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "d={0: 'Apple___Apple_scab',\n",
-    " 1: 'Apple___Black_rot',\n",
-    " 2: 'Apple___Cedar_apple_rust',\n",
-    " 3: 'Apple___healthy',\n",
-    " 4: 'Blueberry___healthy',\n",
-    " 5: 'Cherry_(including_sour)___healthy',\n",
-    " 6: 'Cherry_(including_sour)___Powdery_mildew',\n",
-    " 7: 'Corn_(maize)___Cercospora_leaf_spot Gray_leaf_spot',\n",
-    " 8: 'Corn_(maize)___Common_rust_',\n",
-    " 9: 'Corn_(maize)___healthy',\n",
-    " 10: 'Corn_(maize)___Northern_Leaf_Blight',\n",
-    " 11: 'Grape___Black_rot',\n",
-    " 12: 'Grape___Esca_(Black_Measles)',\n",
-    " 13: 'Grape___healthy',\n",
-    " 14: 'Grape___Leaf_blight_(Isariopsis_Leaf_Spot)',\n",
-    " 15: 'Orange___Haunglongbing_(Citrus_greening)',\n",
-    " 16: 'Peach___Bacterial_spot',\n",
-    " 17: 'Peach___healthy',\n",
-    " 18: 'Pepper,_bell___Bacterial_spot',\n",
-    " 19: 'Pepper,_bell___healthy',\n",
-    " 20: 'Potato___Early_blight',\n",
-    " 21: 'Potato___healthy',\n",
-    " 22: 'Potato___Late_blight',\n",
-    " 23: 'Raspberry___healthy',\n",
-    " 24: 'Soybean___healthy',\n",
-    " 25: 'Squash___Powdery_mildew',\n",
-    " 26: 'Strawberry___healthy',\n",
-    " 27: 'Strawberry___Leaf_scorch',\n",
-    " 28: 'Tomato___Bacterial_spot',\n",
-    " 29: 'Tomato___Early_blight',\n",
-    " 30: 'Tomato___healthy',\n",
-    " 31: 'Tomato___Late_blight',\n",
-    " 32: 'Tomato___Leaf_Mold',\n",
-    " 33: 'Tomato___Septoria_leaf_spot',\n",
-    " 34: 'Tomato___Spider_mites Two-spotted_spider_mite',\n",
-    " 35: 'Tomato___Target_Spot',\n",
-    " 36: 'Tomato___Tomato_mosaic_virus',\n",
-    " 37: 'Tomato___Tomato_Yellow_Leaf_Curl_Virus'}"
+    "# save to TFllite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow\\lite\\python\\util.py:238: convert_variables_to_constants (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.compat.v1.graph_util.convert_variables_to_constants`\n",
+      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\graph_util_impl.py:270: extract_sub_graph (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.compat.v1.graph_util.extract_sub_graph`\n",
+      "INFO:tensorflow:Froze 4 variables.\n",
+      "INFO:tensorflow:Converted 4 variables to const ops.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "78456504"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#from_keras_model_file\n",
+    "file=r\"C:\\work\\freelancing\\plants-collage-project\\models\\model-v1.h5\"\n",
+    "converter = tf.lite.TFLiteConverter.from_keras_model_file(file)\n",
+    "# Convert the model\n",
+    "tflite_model = converter.convert()\n",
+    "# Create the tflite model file\n",
+    "tflite_model_name = \"mymodel.tflite\"\n",
+    "open(tflite_model_name, \"wb\").write(tflite_model)"
    ]
   },
   {
